--- a/conda_env.yml
+++ b/conda_env.yml
@@ -11,20 +11,25 @@ dependencies:
   - bottleneck=1.3.4=py310h4e76f89_0
   - brotli=1.0.9=hb1e8313_2
   - bzip2=1.0.8=h1de35cc_0
-  - ca-certificates=2022.6.15=h033912b_0
-  - certifi=2022.6.15=py310h2ec42d9_0
+  - ca-certificates=2022.4.26=hecd8cb5_0
+  - certifi=2022.6.15=py310hecd8cb5_0
   - cycler=0.11.0=pyhd3eb1b0_0
+  - debugpy=1.5.1=py310he9d5cce_0
   - decorator=5.1.1=pyhd3eb1b0_0
+  - entrypoints=0.4=py310hecd8cb5_0
   - executing=0.8.3=pyhd3eb1b0_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.11.0=hd8bbffd_0
   - giflib=5.2.1=haf1e3a3_0
   - intel-openmp=2021.4.0=hecd8cb5_3538
+  - ipykernel=6.9.1=py310hecd8cb5_0
   - ipython=8.3.0=py310hecd8cb5_0
   - isort=5.9.3=pyhd3eb1b0_0
   - jedi=0.18.1=py310hecd8cb5_1
   - joblib=1.1.0=pyhd8ed1ab_0
   - jpeg=9e=hca72f7f_0
+  - jupyter_client=7.2.2=py310hecd8cb5_0
+  - jupyter_core=4.10.0=py310hecd8cb5_0
   - kiwisolver=1.4.2=py310he9d5cce_0
   - lazy-object-proxy=1.6.0=py310hca72f7f_0
   - lcms2=2.12=hf1fd2bf_0
@@ -34,6 +39,7 @@ dependencies:
   - libffi=3.3=hb1e8313_2
   - libgfortran=3.0.1=h93005f0_2
   - libpng=1.6.37=ha441bb4_0
+  - libsodium=1.0.18=h1de35cc_0
   - libtiff=4.2.0=hdb42f99_1
   - libwebp=1.2.2=h56c3ce4_0
   - libwebp-base=1.2.2=hca72f7f_0
@@ -49,10 +55,11 @@ dependencies:
   - mkl_random=1.2.2=py310hc081a56_0
   - munkres=1.1.4=py_0
   - ncurses=6.3=hca72f7f_3
+  - nest-asyncio=1.5.5=py310hecd8cb5_0
   - numexpr=2.8.3=py310hdcd3fac_0
   - numpy=1.22.3=py310hdcd3fac_0
   - numpy-base=1.22.3=py310hfd2de13_0
-  - openssl=1.1.1q=hfe4f2af_0
+  - openssl=1.1.1p=hca72f7f_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.2=py310he9d5cce_0
   - parso=0.8.3=pyhd3eb1b0_0
@@ -72,6 +79,7 @@ dependencies:
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python_abi=3.10=2_cp310
   - pytz=2022.1=py310hecd8cb5_0
+  - pyzmq=22.3.0=py310he9d5cce_2
   - readline=8.1.2=hca72f7f_1
   - scikit-learn=1.0.2=py310h598de7d_0
   - scipy=1.7.3=py310h3dd3380_0
@@ -92,6 +100,7 @@ dependencies:
   - wheel=0.37.1=pyhd3eb1b0_0
   - wrapt=1.13.3=py310hca72f7f_2
   - xz=5.2.5=hca72f7f_1
+  - zeromq=4.3.4=h23ab428_0
   - zlib=1.2.12=h4dc903c_2
   - zstd=1.5.2=hcb37349_0
-prefix: /Users/faigaalawad/opt/anaconda3/envs/senseGAN
+prefix: /Users/Faiga/opt/anaconda3/envs/senseGAN
