--- a/conda_env.yml
+++ b/conda_env.yml
@@ -1,5 +1,6 @@
 name: senseGAN
 channels:
+  - pytorch
   - conda-forge
   - defaults
 dependencies:
@@ -10,17 +11,27 @@ dependencies:
   - blas=1.0=mkl
   - bottleneck=1.3.4=py310h4e76f89_0
   - brotli=1.0.9=hb1e8313_2
+  - brotlipy=0.7.0=py310hca72f7f_1002
   - bzip2=1.0.8=h1de35cc_0
   - ca-certificates=2022.4.26=hecd8cb5_0
   - certifi=2022.6.15=py310hecd8cb5_0
+  - cffi=1.15.0=py310hc55c11b_1
+  - charset-normalizer=2.0.4=pyhd3eb1b0_0
+  - cryptography=37.0.1=py310hf6deb26_0
   - cycler=0.11.0=pyhd3eb1b0_0
   - debugpy=1.5.1=py310he9d5cce_0
   - decorator=5.1.1=pyhd3eb1b0_0
   - entrypoints=0.4=py310hecd8cb5_0
   - executing=0.8.3=pyhd3eb1b0_0
+  - ffmpeg=4.3=h0a44026_0
   - fonttools=4.25.0=pyhd3eb1b0_0
   - freetype=2.11.0=hd8bbffd_0
+  - gettext=0.21.0=h7535e17_0
   - giflib=5.2.1=haf1e3a3_0
+  - gmp=6.2.1=he9d5cce_3
+  - gnutls=3.6.15=hed9c0bf_0
+  - icu=58.2=h0a44026_3
+  - idna=3.3=pyhd3eb1b0_0
   - intel-openmp=2021.4.0=hecd8cb5_3538
   - ipykernel=6.9.1=py310hecd8cb5_0
   - ipython=8.3.0=py310hecd8cb5_0
@@ -31,6 +42,7 @@ dependencies:
   - jupyter_client=7.2.2=py310hecd8cb5_0
   - jupyter_core=4.10.0=py310hecd8cb5_0
   - kiwisolver=1.4.2=py310he9d5cce_0
+  - lame=3.100=h1de35cc_0
   - lazy-object-proxy=1.6.0=py310hca72f7f_0
   - lcms2=2.12=hf1fd2bf_0
   - libblas=3.9.0=12_osx64_mkl
@@ -38,11 +50,16 @@ dependencies:
   - libcxx=12.0.0=h2f01273_0
   - libffi=3.3=hb1e8313_2
   - libgfortran=3.0.1=h93005f0_2
+  - libiconv=1.16=hca72f7f_2
+  - libidn2=2.3.2=h9ed2024_0
   - libpng=1.6.37=ha441bb4_0
   - libsodium=1.0.18=h1de35cc_0
+  - libtasn1=4.16.0=h9ed2024_0
   - libtiff=4.2.0=hdb42f99_1
+  - libunistring=0.9.10=h9ed2024_0
   - libwebp=1.2.2=h56c3ce4_0
   - libwebp-base=1.2.2=hca72f7f_0
+  - libxml2=2.9.14=hbf8cd5e_0
   - llvm-openmp=14.0.4=ha654fa7_0
   - lz4-c=1.9.3=h23ab428_1
   - matplotlib=3.5.1=py310hecd8cb5_1
@@ -56,9 +73,11 @@ dependencies:
   - munkres=1.1.4=py_0
   - ncurses=6.3=hca72f7f_3
   - nest-asyncio=1.5.5=py310hecd8cb5_0
+  - nettle=3.7.3=h230ac6f_1
   - numexpr=2.8.3=py310hdcd3fac_0
   - numpy=1.22.3=py310hdcd3fac_0
   - numpy-base=1.22.3=py310hfd2de13_0
+  - openh264=2.1.1=h8346a28_0
   - openssl=1.1.1p=hca72f7f_0
   - packaging=21.3=pyhd3eb1b0_0
   - pandas=1.4.2=py310he9d5cce_0
@@ -72,15 +91,20 @@ dependencies:
   - prompt-toolkit=3.0.20=pyhd3eb1b0_0
   - ptyprocess=0.7.0=pyhd3eb1b0_2
   - pure_eval=0.2.2=pyhd3eb1b0_0
+  - pycparser=2.21=pyhd3eb1b0_0
   - pygments=2.11.2=pyhd3eb1b0_0
   - pylint=2.12.2=py310hecd8cb5_1
+  - pyopenssl=22.0.0=pyhd3eb1b0_0
   - pyparsing=3.0.4=pyhd3eb1b0_0
+  - pysocks=1.7.1=py310hecd8cb5_0
   - python=3.10.4=hdfd78df_0
   - python-dateutil=2.8.2=pyhd3eb1b0_0
   - python_abi=3.10=2_cp310
+  - pytorch=1.12.0=py3.10_0
   - pytz=2022.1=py310hecd8cb5_0
   - pyzmq=22.3.0=py310he9d5cce_2
   - readline=8.1.2=hca72f7f_1
+  - requests=2.28.0=py310hecd8cb5_0
   - scikit-learn=1.0.2=py310h598de7d_0
   - scipy=1.7.3=py310h3dd3380_0
   - seaborn=0.11.2=pyhd3eb1b0_0
@@ -92,10 +116,14 @@ dependencies:
   - threadpoolctl=3.1.0=pyh8a188c0_0
   - tk=8.6.12=h5d9f67b_0
   - toml=0.10.2=pyhd3eb1b0_0
+  - torchaudio=0.12.0=py310_cpu
+  - torchvision=0.13.0=py310_cpu
   - tornado=6.1=py310hca72f7f_0
+  - tqdm=4.64.0=py310hecd8cb5_0
   - traitlets=5.1.1=pyhd3eb1b0_0
   - typing_extensions=4.1.1=pyh06a4308_0
   - tzdata=2022a=hda174b7_0
+  - urllib3=1.26.9=py310hecd8cb5_0
   - wcwidth=0.2.5=pyhd3eb1b0_0
   - wheel=0.37.1=pyhd3eb1b0_0
   - wrapt=1.13.3=py310hca72f7f_2
@@ -103,4 +131,4 @@ dependencies:
   - zeromq=4.3.4=h23ab428_0
   - zlib=1.2.12=h4dc903c_2
   - zstd=1.5.2=hcb37349_0
-prefix: /Users/Faiga/opt/anaconda3/envs/senseGAN
+prefix: /Users/faigaalawad/opt/anaconda3/envs/senseGAN
